--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photography</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
+
 <body class="manrope-font">
     <header>
-
+        <nav class="container">
+            <div class="nav-img">
+                <img src="./images/Logo.png" alt="logo">
+            </div>
+            <ul>
+                <li><a id="curve1" href="#">Home</a></li>
+                <li><a href="#">About Me</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a id="curve2" href="#">Services</a></li>
+            </ul>
+            <div class="nav-btn">
+                <button>Contact Me</button>
+            </div>
+        </nav>
     </header>
 </body>
+
 </html>
