--- a/index.html
+++ b/index.html
@@ -10,20 +10,22 @@
 
 <body class="manrope-font">
     <header>
-        <nav class="container">
-            <div class="nav-img">
-                <img src="./images/Logo.png" alt="logo">
-            </div>
-            <ul>
-                <li><a id="curve1" href="#">Home</a></li>
-                <li><a href="#">About Me</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a id="curve2" href="#">Services</a></li>
-            </ul>
-            <div class="nav-btn">
-                <button>Contact Me</button>
-            </div>
-        </nav>
+        <section class="nav-section">
+            <nav class="container">
+                <div class="nav-img">
+                    <img src="./images/Logo.png" alt="logo">
+                </div>
+                <ul class="medium-font">
+                    <li><a id="curve1" href="#">Home</a></li>
+                    <li><a href="#">About Me</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a id="curve2" href="#">Services</a></li>
+                </ul>
+                <div class="nav-btn">
+                    <button class="medium-font">Contact Me</button>
+                </div>
+            </nav>
+        </section>
     </header>
 </body>
 
