added banner information section

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photography</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body class="manrope-font">
     <header>
         <section class="nav-section">
-            <nav class="container">
+            <nav>
                 <div class="nav-img">
                     <img src="./images/Logo.png" alt="logo">
                 </div>
@@ -25,6 +26,77 @@
                     <button class="medium-font">Contact Me</button>
                 </div>
             </nav>
+        </section>
+        <section class="banner">
+            <div class="banner-info container">
+                <div class="first-title">
+                    <span id="banner-small-title">Stunning Photography by</span>
+                    <h2 id="banner-big-title">JESHAN NATH</h2>
+                </div>
+                <div class="second-title">
+                    <div class="second-title-info"><span class="semi-bold text-tranform">Let’s</span><button class="banner-btn"><i class="fa-solid fa-arrow-trend-up"></i></button></div>
+                    <span class="semi-bold text-tranform">Work Together</span>
+                </div>
+            </div>
+
+            <div class="banner-icons-container border">
+                <div class="banner-icons">
+                    <div class="banner-icon">
+                    <img src="./images/banner_Icon.png" alt="banner-icon">
+                </div>
+                <div class="banner-icon-text">
+                    <p class="icon-text text-tranform">Event Photography</p>
+                </div>
+                </div>
+                <div class="banner-icons">
+                    <div class="banner-icon">
+                    <img src="./images/banner_Icon.png" alt="banner-icon">
+                </div>
+                <div class="banner-icon-text">
+                    <p class="icon-text text-tranform">Event Photography</p>
+                </div>
+                </div>
+                <div class="banner-icons">
+                    <div class="banner-icon">
+                    <img src="./images/banner_Icon.png" alt="banner-icon">
+                </div>
+                <div class="banner-icon-text">
+                    <p class="icon-text text-tranform">Event Photography</p>
+                </div>
+                </div>
+                <div class="banner-icons">
+                    <div class="banner-icon">
+                    <img src="./images/banner_Icon.png" alt="banner-icon">
+                </div>
+                <div class="banner-icon-text">
+                    <p class="icon-text text-tranform">Event Photography</p>
+                </div>
+                </div>
+                <div class="banner-icons">
+                    <div class="banner-icon">
+                    <img src="./images/banner_Icon.png" alt="banner-icon">
+                </div>
+                <div class="banner-icon-text">
+                    <p class="icon-text text-tranform">Event Photography</p>
+                </div>
+                </div>
+                <div class="banner-icons">
+                    <div class="banner-icon">
+                    <img src="./images/banner_Icon.png" alt="banner-icon">
+                </div>
+                <div class="banner-icon-text">
+                    <p class="icon-text text-tranform">Event Photography</p>
+                </div>
+                </div>
+                <div class="banner-icons">
+                    <div class="banner-icon">
+                    <img src="./images/banner_Icon.png" alt="banner-icon">
+                </div>
+                <div class="banner-icon-text">
+                    <p class="icon-text text-tranform">Event Photography</p>
+                </div>
+                </div>
+            </div>
         </section>
     </header>
 </body>
