Added banner cover image

--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
                 </div>
                 </div>
             </div>
+
+            <div class="banner-cover-container container">
+                <img src="./images/banner-cover.png" alt="banner-cover-image">
+            </div>
         </section>
     </header>
 </body>
