added about first information section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
             </nav>
         </section>
-        <section class="banner">
+        <section class="banner margin-bottom">
             <div class="banner-info container">
                 <div class="first-title">
                     <span id="banner-small-title">Stunning Photography by</span>
@@ -103,6 +103,19 @@
             </div>
         </section>
     </header>
+    <main>
+        <section class="about">
+            <div class="about-short container">
+                <div class="short-info">
+                <span class="semi-bold-sm">ABOUT</span> <br>
+                <span class="semi-bold">I AM JESHAN</span>
+            </div>
+            <div class="short-info-btn">
+                <button>Know More <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
