added banner section and about section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photography</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 
@@ -34,7 +36,8 @@
                     <h2 id="banner-big-title">JESHAN NATH</h2>
                 </div>
                 <div class="second-title">
-                    <div class="second-title-info"><span class="semi-bold text-tranform">Let’s</span><button class="banner-btn"><i class="fa-solid fa-arrow-trend-up"></i></button></div>
+                    <div class="second-title-info"><span class="semi-bold text-tranform">Let’s</span><button
+                            class="banner-btn"><i class="fa-solid fa-arrow-trend-up"></i></button></div>
                     <span class="semi-bold text-tranform">Work Together</span>
                 </div>
             </div>
@@ -42,59 +45,59 @@
             <div class="banner-icons-container border">
                 <div class="banner-icons">
                     <div class="banner-icon">
-                    <img src="./images/banner_Icon.png" alt="banner-icon">
-                </div>
-                <div class="banner-icon-text">
-                    <p class="icon-text text-tranform">Event Photography</p>
-                </div>
-                </div>
-                <div class="banner-icons">
-                    <div class="banner-icon">
-                    <img src="./images/banner_Icon.png" alt="banner-icon">
-                </div>
-                <div class="banner-icon-text">
-                    <p class="icon-text text-tranform">Event Photography</p>
-                </div>
+                        <img src="./images/banner_Icon.png" alt="banner-icon">
+                    </div>
+                    <div class="banner-icon-text">
+                        <p class="icon-text text-tranform">Event Photography</p>
+                    </div>
                 </div>
                 <div class="banner-icons">
                     <div class="banner-icon">
-                    <img src="./images/banner_Icon.png" alt="banner-icon">
-                </div>
-                <div class="banner-icon-text">
-                    <p class="icon-text text-tranform">Event Photography</p>
-                </div>
-                </div>
-                <div class="banner-icons">
-                    <div class="banner-icon">
-                    <img src="./images/banner_Icon.png" alt="banner-icon">
-                </div>
-                <div class="banner-icon-text">
-                    <p class="icon-text text-tranform">Event Photography</p>
-                </div>
+                        <img src="./images/banner_Icon.png" alt="banner-icon">
+                    </div>
+                    <div class="banner-icon-text">
+                        <p class="icon-text text-tranform">Event Photography</p>
+                    </div>
                 </div>
                 <div class="banner-icons">
                     <div class="banner-icon">
-                    <img src="./images/banner_Icon.png" alt="banner-icon">
-                </div>
-                <div class="banner-icon-text">
-                    <p class="icon-text text-tranform">Event Photography</p>
-                </div>
-                </div>
-                <div class="banner-icons">
-                    <div class="banner-icon">
-                    <img src="./images/banner_Icon.png" alt="banner-icon">
-                </div>
-                <div class="banner-icon-text">
-                    <p class="icon-text text-tranform">Event Photography</p>
-                </div>
+                        <img src="./images/banner_Icon.png" alt="banner-icon">
+                    </div>
+                    <div class="banner-icon-text">
+                        <p class="icon-text text-tranform">Event Photography</p>
+                    </div>
                 </div>
                 <div class="banner-icons">
                     <div class="banner-icon">
-                    <img src="./images/banner_Icon.png" alt="banner-icon">
+                        <img src="./images/banner_Icon.png" alt="banner-icon">
+                    </div>
+                    <div class="banner-icon-text">
+                        <p class="icon-text text-tranform">Event Photography</p>
+                    </div>
                 </div>
-                <div class="banner-icon-text">
-                    <p class="icon-text text-tranform">Event Photography</p>
+                <div class="banner-icons">
+                    <div class="banner-icon">
+                        <img src="./images/banner_Icon.png" alt="banner-icon">
+                    </div>
+                    <div class="banner-icon-text">
+                        <p class="icon-text text-tranform">Event Photography</p>
+                    </div>
                 </div>
+                <div class="banner-icons">
+                    <div class="banner-icon">
+                        <img src="./images/banner_Icon.png" alt="banner-icon">
+                    </div>
+                    <div class="banner-icon-text">
+                        <p class="icon-text text-tranform">Event Photography</p>
+                    </div>
+                </div>
+                <div class="banner-icons">
+                    <div class="banner-icon">
+                        <img src="./images/banner_Icon.png" alt="banner-icon">
+                    </div>
+                    <div class="banner-icon-text">
+                        <p class="icon-text text-tranform">Event Photography</p>
+                    </div>
                 </div>
             </div>
 
@@ -107,12 +110,49 @@
         <section class="about">
             <div class="about-short container">
                 <div class="short-info">
-                <span class="semi-bold-sm">ABOUT</span> <br>
-                <span class="semi-bold">I AM JESHAN</span>
+                    <span class="semi-bold-sm">ABOUT</span> <br>
+                    <span class="semi-bold">I AM JESHAN</span>
+                </div>
+                <div class="short-info-btn">
+                    <button>Know More <i class="fa-solid fa-arrow-right"></i></button>
+                </div>
             </div>
-            <div class="short-info-btn">
-                <button>Know More <i class="fa-solid fa-arrow-right"></i></button>
-            </div>
+            <hr class="line container border">
+            <div class="about-information container">
+                <div class="about-cover">
+                    <img src="./images/about-Image.png" alt="jeshan">
+                </div>
+                <div class="about-info">
+                    <div class="introduction border">
+                        <h5 class="h5-font">Introduction</h5>
+                        <p class="regular-font">My journey as a photographer has been a lifelong quest to capture the extraordinary in the ordinary, to freeze fleeting moments in time, and to share the world's beauty as I see it. Based in the enchanting landscapes of the USA, I find inspiration in every corner of this diverse and vibrant country. Join me as we embark on a visual odyssey, where each photograph tells a story, and every frame is a piece of my heart.</p>
+                    </div>
+                    <div class="contact-info border">
+                        <div class="contact-title">
+                            <h5>Contact Information</h5>
+                        </div>
+                        <div class="contact">
+                            <div>
+                                <span>Email</span> <br>
+                                <span>antickroy018@gmail.com</span>
+                            </div>
+                            <div>
+                                <span>Phone Number</span> <br>
+                                <span>01797776889</span>
+                            </div>
+                        </div>
+                        <div class="logo-btn">
+                            <div class="logos">
+                                <i class="fa-brands fa-facebook"></i>
+                                <i class="fa-brands fa-twitter"></i>
+                                <i class="fa-brands fa-linkedin"></i>
+                            </div>
+                            <div class="btns">
+                                <button>Let’s Work</button><button>Download CV</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
