added about section

--- a/index.html
+++ b/index.html
@@ -129,20 +129,20 @@
                     </div>
                     <div class="contact-info border">
                         <div class="contact-title">
-                            <h5>Contact Information</h5>
+                            <h5 class="h5-font">Contact Information</h5>
                         </div>
                         <div class="contact">
                             <div>
-                                <span>Email</span> <br>
-                                <span>antickroy018@gmail.com</span>
+                                <span class="medium-font cti">Email</span> <br>
+                                <span class="ct">antickroy018@gmail.com</span>
                             </div>
                             <div>
-                                <span>Phone Number</span> <br>
-                                <span>01797776889</span>
+                                <span class="medium-font cti">Phone Number</span> <br>
+                                <span class="ct">01797776889</span>
                             </div>
                         </div>
                         <div class="logo-btn">
-                            <div class="logos">
+                            <div class="logos border">
                                 <i class="fa-brands fa-facebook"></i>
                                 <i class="fa-brands fa-twitter"></i>
                                 <i class="fa-brands fa-linkedin"></i>
